k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finops-ingress
  namespace: finops
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: finops-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "FinOps MVP"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /openapi.json
            pathType: ImplementationSpecific
            backend:
              service:
                name: finops-api
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: finops-api
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: finops-api
                port:
                  number: 8000
          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: finops-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finops-frontend
                port:
                  number: 80
